01-outfit-app/services/k8s/image-processor-service.yaml
# image-processor-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-processor-service
  namespace: outfit-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: image-processor-service
  template:
    metadata:
      labels:
        app: image-processor-service
    spec:
      containers:
      - name: image-processor-service
        image: image-processor-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: image-processor-service
  namespace: outfit-app
  labels:
    monitored: "true"
spec:
  selector:
    app: image-processor-service
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  type: ClusterIP
